--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
     "db:generate": "drizzle-kit generate:pg",
-    "db:push": "drizzle-kit push:pg"
+    "db:push": "drizzle-kit push:pg",
+    "db:seed": "bun src/db/seed.ts"
   },
   "dependencies": {
     "drizzle-orm": "^0.29.4",
