--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build: .
     hostname: api01
     environment:
-      - DATABASE_URL=postgres://admin:123@db:5432/rinha
+      - DATABASE_URL=postgres://rinha:rinha@db:5432/rinha
 
     ports:
       - "8081:3000"
@@ -14,14 +14,14 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.6"
-          memory: "200MB"
+          cpus: "0.5"
+          memory: "70MB"
 
   api02:
     <<: *api
     hostname: api02
     environment:
-      - DATABASE_URL=postgres://admin:123@db:5432/rinha
+      - DATABASE_URL=postgres://rinha:rinha@db:5432/rinha
     ports:
       - "8082:3000"
 
@@ -43,9 +43,10 @@ services:
   db:
     image: postgres:16.2-alpine
     hostname: db
+    command: "postgres -c max_connections=1000 -c shared_buffers=200MB -c synchronous_commit=off -c fsync=off -c full_page_writes=off"
     environment:
-      - POSTGRES_PASSWORD=123
-      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=rinha
+      - POSTGRES_USER=rinha
       - POSTGRES_DB=rinha
     ports:
       - "5432:5432"
@@ -54,10 +55,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.20"
-          memory: "140MB"
+          cpus: "0.4"
+          memory: "400MB"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD", "pg_isready", "--username", "rinha"]
       timeout: 10s
       interval: 10s
       retries: 10
